--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     implementation 'org.openftc:easyopencv:1.7.3'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation 'org.ftclib.ftclib:vision:2.1.0'
 }
